moved test-store to dev dep and made a fn and a field public from crate public

--- a/runtime/test/Cargo.toml
+++ b/runtime/test/Cargo.toml
@@ -9,6 +9,8 @@ wasmtime = "0.27.0"
 graph = { path = "../../graph" }
 graph-chain-ethereum = { path = "../../chain/ethereum" }
 graph-runtime-wasm = { path = "../wasm" }
-test-store = { path = "../../store/test-store" }
 graph-core = { path = "../../core" }
 graph-mock = { path = "../../mock" }
+
+[dev-dependencies]
+test-store = { path = "../../store/test-store" }
