--- a/graph/Cargo.toml
+++ b/graph/Cargo.toml
@@ -7,7 +7,10 @@ edition = "2018"
 anyhow = "1.0"
 async-trait = "0.1.50"
 atomic_refcell = "0.1.7"
-bigdecimal = { version = "0.1.0", features = ["serde"] }
+bigdecimal01 = { package = "bigdecimal", version = "0.1.0" }
+bigdecimal = { version = "0.3.0", features = ["serde"] }
+num-bigint02 = { package = "num-bigint", version = "^0.2.6" }
+num-bigint = { version = "^0.4.2", features = ["serde"] }
 bytes = "1.0.1"
 diesel = { version = "1.4.7", features = ["postgres", "serde_json", "numeric", "r2d2", "chrono"] }
 diesel_derives = "1.4"
@@ -29,7 +32,6 @@ futures = "0.1.21"
 graphql-parser = "0.3.0"
 lazy_static = "1.4.0"
 mockall = "0.8.3"
-num-bigint = { version = "^0.2.6", features = ["serde"] }
 num_cpus = "1.13.0"
 num-traits = "0.2.14"
 rand = "0.6.1"
