--- a/graph/Cargo.toml
+++ b/graph/Cargo.toml
@@ -9,13 +9,12 @@ async-trait = "0.1.50"
 atomic_refcell = "0.1.7"
 bigdecimal = { version = "0.1.0", features = ["serde"] }
 bytes = "1.0.1"
-diesel = { version = "1.4.7", features = ["serde_json", "numeric", "r2d2", "chrono"] }
+diesel = { version = "1.4.7", features = ["postgres", "serde_json", "numeric", "r2d2", "chrono"] }
 diesel_derives = "1.4"
 chrono = "0.4.19"
 Inflector = "0.11.3"
 isatty = "0.1.9"
 reqwest = { version = "0.11.2", features = ["json", "stream", "multipart", "trust-dns-resolver"] }
-postgres = "0.19.1"
 
 # master contains changes such as
 # https://github.com/paritytech/ethabi/pull/140, which upstream does not want
