--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,7 +62,7 @@ jobs:
       - name: Run unit tests
         uses: actions-rs/cargo@v1
         env:
-          RUSTFLAGS: "-C link-arg=-fuse-ld=lld -D warnings"
+          RUSTFLAGS: "-D warnings"
         with:
           command: test
           args: --verbose --workspace --exclude graph-tests -- --nocapture
