core,chain,graph,node,store: added `FirehoseBlockStream` implementation of `BlockStream` (#2716)
* core,chain,graph,node,store: added `FirehoseBlockStream` implementation of `BlockStream`

This PR adds a new `BlockStream` implementation called `FirehoseBlockStream` that is a built-in replacement for the existing `PollingBlockStream`. If your config has a provider of `type = firehose` (needs to use a new format for the provider definitions) **and** your started the `graph-node` with the environment variable `FIREHOSE_PRIORITY=true`, when a subgraph is syncing, a `FirehoseBlockStream` will be used to feed blocks to the subgraph deployed.

Left:
- [ ] More integration tests and behavior validation (dynamic data sources is one of them)
- [ ] Check how `FirehoseBlockStream` should be enabled in the future (by default if present, keep and env var, etc.)
- [ ] Review & addressing feedback

* Fixed tests and proto documentation (were leading to doc tests errors)

* Changed use statements to (try) avoiding compilation errors on release mode

* Addressed all review comments

* Updated firehose with latest comments

* Trying unit tests without `lld`

* With disabled incremental compilation

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,6 +63,7 @@ jobs:
         uses: actions-rs/cargo@v1
         env:
           RUSTFLAGS: "-C link-arg=-fuse-ld=lld -D warnings"
+          CARGO_INCREMENTAL: 0
         with:
           command: test
           args: --verbose --workspace --exclude graph-tests -- --nocapture
