--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -14,6 +14,7 @@ graph = { path = "../graph" }
 # finished as long as this dependency exists
 graph-chain-ethereum = { path = "../chain/ethereum" }
 graph-chain-near = { path = "../chain/near" }
+graph-chain-tendermint = { path = "../chain/tendermint" }
 lazy_static = "1.2.0"
 lru_time_cache = "0.11"
 semver = "1.0.3"
