--- a/chain/near/Cargo.toml
+++ b/chain/near/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 tonic-build = "0.5.1"
 
 [dependencies]
+base64 = "0.13"
 graph = { path = "../../graph" }
 prost = "0.8.0"
 prost-types = "0.8.0"
