--- a/graph/Cargo.toml
+++ b/graph/Cargo.toml
@@ -14,7 +14,7 @@ diesel_derives = "1.4"
 chrono = "0.4.19"
 Inflector = "0.11.3"
 isatty = "0.1.9"
-reqwest = { version = "0.11.2", features = ["json", "stream", "multipart", "trust-dns-resolver"] }
+reqwest = { version = "0.11.2", features = ["json", "stream", "multipart", "trust-dns-resolver", "blocking"] }
 
 # master contains changes such as
 # https://github.com/paritytech/ethabi/pull/140, which upstream does not want
