--- a/chain/tendermint/Cargo.toml
+++ b/chain/tendermint/Cargo.toml
@@ -14,6 +14,7 @@ prost-types = "0.8.0"
 serde = "1.0"
 anyhow = "1.0"
 semver = "1.0.3"
+itertools = "0.10.3"
 
 graph-runtime-wasm = { path = "../../runtime/wasm" }
 graph-runtime-derive = { path = "../../runtime/derive" }
@@ -22,4 +23,3 @@ graph-runtime-derive = { path = "../../runtime/derive" }
 graph-core = { path = "../../core" }
 pretty_assertions = "0.7.2"
 test-store = { path = "../../store/test-store" }
-
