--- a/runtime/wasm/Cargo.toml
+++ b/runtime/wasm/Cargo.toml
@@ -23,3 +23,9 @@ anyhow = "1.0"
 wasmtime = "0.27.0"
 defer = "0.1"
 never = "0.1"
+
+# Patch being upstreamed in https://github.com/paritytech/wasm-utils/pull/174
+pwasm-utils = { git = "https://github.com/edgeandnode/wasm-utils", branch = "sign-ext-feature-flag", features = ["sign_ext"] }
+
+# AssemblyScript uses sign extensions
+parity-wasm = { version = "0.42", features = ["std", "sign_ext"] }
