--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -42,6 +42,7 @@ shellexpand = "2.1.0"
 diesel = "1.4.8"
 fail = "0.5"
 http = "0.2.5" # must be compatible with the version rust-web3 uses
+prometheus = { version ="0.13.0", features = ["push"] }
 
 [dev-dependencies]
 assert_cli = "0.6"
