fix graph codegen in firehose tests

--- a/.github/workflows/sf.yml
+++ b/.github/workflows/sf.yml
@@ -94,6 +94,7 @@ jobs:
           echo "Duplicating the mainnet-calls subgraph to get different deployment hashes"
           sed "s/description: .*/description: Test Events RPC/" mainnet-events.yaml > mainnet-events-rpc.yaml
           sed "s/description: .*/description: Test Events firehose/" mainnet-events.yaml > mainnet-events-firehose.yaml
+          graph codegen mainnet-events-rpc.yaml
           graph build  --ipfs http://localhost:5001 mainnet-events-rpc.yaml |tee buildout-rpc
           graph build  --ipfs http://localhost:5001 mainnet-events-firehose.yaml |tee buildout-firehose
           IPFS_HASH_RPC="$(awk '/Build.completed/ {print $3}' buildout-rpc)"
@@ -178,6 +179,7 @@ jobs:
           echo "Duplicating the mainnet-calls subgraph to get different deployment hashes"
           sed "s/description: .*/description: Test Calls RPC/" mainnet-calls.yaml > mainnet-calls-rpc.yaml
           sed "s/description: .*/description: Test Calls firehose/" mainnet-calls.yaml > mainnet-calls-firehose.yaml
+          graph codegen mainnet-events-rpc.yaml
           graph build  --ipfs http://localhost:5001 mainnet-calls-rpc.yaml |tee buildout-rpc
           graph build  --ipfs http://localhost:5001 mainnet-calls-firehose.yaml |tee buildout-firehose
           IPFS_HASH_RPC="$(awk '/Build.completed/ {print $3}' buildout-rpc)"
