change trigger for StreamingFast integration tests to align with ci.yml

--- a/.github/workflows/sf.yml
+++ b/.github/workflows/sf.yml
@@ -1,6 +1,10 @@
 name: StreamingFast Integration
 
-on: push
+on:
+  push:
+    branches: [master]
+  pull_request:
+    types: [opened, synchronize, reopened]
 
 env:
   CARGO_TERM_COLOR: always
