Add non-intrusive Clippy linting to the CI (#3310)
* ci: Add Clippy checks to the CI

* ci: Add caching to Clippy step

* ci: Leave rustfmt on top for clarity

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -147,26 +147,46 @@ jobs:
           toolchain: ${{ matrix.rust }}
           components: rustfmt
           override: true
-      - name: Cache cargo registry
-        uses: actions/cache@v2
-        with:
-          path: |
-            ~/.cargo/registry
-            ~/.cargo/git
-          key: rustfmt-cargo-${{ hashFiles('**/Cargo.toml') }}
 
-      - name: Install dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get -y install libpq-dev
-
-      - name: Check formating
+      - name: Check formatting
         uses: actions-rs/cargo@v1
         env:
           RUSTFLAGS: "-D warnings"
         with:
           command: fmt
           args: --all -- --check
+
+  clippy:
+    name: Report Clippy warnings
+    strategy:
+      matrix:
+        rust: ["stable"]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: ${{ matrix.rust }}
+          components: clippy
+          override: true
+      # Unlike rustfmt, Clippy actually compiles stuff so it benefits from
+      # caching.
+      - name: Cache cargo registry
+        uses: actions/cache@v2
+        with:
+          path: |
+            ~/.cargo/registry
+            ~/.cargo/git
+          key: check-cargo-${{ hashFiles('**/Cargo.toml') }}
+
+      - name: Run Clippy
+        uses: actions-rs/cargo@v1
+        # We do *not* block builds if Clippy complains. It's just here to let us
+        # keep an eye out on the warnings it produces.
+        continue-on-error: true
+        with:
+          command: clippy
 
   release-check:
     name: Build in release mode
