--- a/store/postgres/Cargo.toml
+++ b/store/postgres/Cargo.toml
@@ -10,9 +10,10 @@ derive_more = { version = "0.99.17" }
 diesel = { version = "1.4.8", features = ["postgres", "serde_json", "numeric", "r2d2"] }
 # We use diesel-dynamic-schema straight from git as the project has not
 # made a release as a crate yet
-diesel-dynamic-schema = { git = "https://github.com/diesel-rs/diesel-dynamic-schema", rev="a8ec4fb1" }
+diesel-dynamic-schema = { git = "https://github.com/diesel-rs/diesel-dynamic-schema", rev = "a8ec4fb1" }
 diesel-derive-enum = { version = "1.1", features = ["postgres"] }
 diesel_migrations = "1.3.0"
+envconfig = "0.10.0"
 fallible-iterator = "0.2.0"
 futures = "0.1.21"
 graph = { path = "../../graph" }
@@ -24,7 +25,7 @@ lru_time_cache = "0.11"
 maybe-owned = "0.3.4"
 postgres = "0.19.1"
 rand = "0.6.1"
-serde = "1.0"
+serde = { version = "1.0", features = ["derive"] }
 uuid = { version = "0.8.1", features = ["v4"] }
 stable-hash = { git = "https://github.com/graphprotocol/stable-hash" }
 backtrace = "0.3"
