--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -8,8 +8,9 @@ async-trait = "0.1.50"
 atomic_refcell = "0.1.8"
 async-stream = "0.3"
 bytes = "0.5"
-futures01 = { package="futures", version="0.1.31" }
-futures = { version="0.3.4", features=["compat"] }
+envconfig = "0.10.0"
+futures01 = { package = "futures", version = "0.1.31" }
+futures = { version = "0.3.4", features = ["compat"] }
 graph = { path = "../graph" }
 # This dependency is temporary. The multiblockchain refactoring is not
 # finished as long as this dependency exists
