--- a/graph/Cargo.toml
+++ b/graph/Cargo.toml
@@ -13,6 +13,7 @@ bytes = "1.0.1"
 diesel = { version = "1.4.8", features = ["postgres", "serde_json", "numeric", "r2d2", "chrono"] }
 diesel_derives = "1.4"
 chrono = "0.4.19"
+envconfig = "0.10.0"
 Inflector = "0.11.3"
 isatty = "0.1.9"
 reqwest = { version = "0.11.2", features = ["json", "stream", "multipart"] }
@@ -27,7 +28,7 @@ num-bigint = { version = "^0.2.6", features = ["serde"] }
 num_cpus = "1.13.1"
 num-traits = "0.2.14"
 rand = "0.6.1"
-semver = {version = "1.0.6", features = ["serde"]}
+semver = { version = "1.0.6", features = ["serde"] }
 serde = { version = "1.0.126", features = ["rc"] }
 serde_derive = "1.0.125"
 serde_json = { version = "1.0", features = ["arbitrary_precision"] }
