improve env vars in node crate

--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -15,6 +15,7 @@ path = "src/bin/manager.rs"
 [dependencies]
 clap = "2.34.0"
 env_logger = "0.9.0"
+envconfig = "0.10.0"
 git-testament = "0.2"
 graphql-parser = "0.4.0"
 futures = { version = "0.3.1", features = ["compat"] }
@@ -29,7 +30,7 @@ graph-graphql = { path = "../graphql" }
 graph-runtime-wasm = { path = "../runtime/wasm" }
 graph-server-http = { path = "../server/http" }
 graph-server-index-node = { path = "../server/index-node" }
-graph-server-json-rpc = { path = "../server/json-rpc"}
+graph-server-json-rpc = { path = "../server/json-rpc" }
 graph-server-websocket = { path = "../server/websocket" }
 graph-server-metrics = { path = "../server/metrics" }
 graph-store-postgres = { path = "../store/postgres" }
@@ -41,8 +42,8 @@ toml = "0.5.7"
 shellexpand = "2.1.0"
 diesel = "1.4.8"
 fail = "0.5"
-http = "0.2.5" # must be compatible with the version rust-web3 uses
-prometheus = { version ="0.13.0", features = ["push"] }
+http = "0.2.5"                                               # must be compatible with the version rust-web3 uses
+prometheus = { version = "0.13.0", features = ["push"] }
 
 [dev-dependencies]
 assert_cli = "0.6"
