--- a/graph/Cargo.toml
+++ b/graph/Cargo.toml
@@ -14,6 +14,7 @@ diesel = { version = "1.4.8", features = ["postgres", "serde_json", "numeric", "
 diesel_derives = "1.4"
 chrono = "0.4.19"
 envconfig = "0.10.0"
+graph-env-vars = { path = "../env-vars" }
 Inflector = "0.11.3"
 isatty = "0.1.9"
 reqwest = { version = "0.11.2", features = ["json", "stream", "multipart"] }
