--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -23,13 +23,14 @@ semver = "1.0.12"
 serde = "1.0"
 serde_json = "1.0"
 serde_yaml = "0.8"
-# tower = { git = "https://github.com/tower-rs/tower.git", features = ["util"] } # SOON 0.5
-tower = { git = "https://github.com/leoyvens/tower.git", features = ["util", "limit"], branch = "fix-call-all-pending-stream" } # SOON 0.5
+# Switch to crates.io once tower 0.5 is released
+tower = { git = "https://github.com/tower-rs/tower.git", features = ["util", "limit"] }
 graph-runtime-wasm = { path = "../runtime/wasm" }
-# tower-test = { git = "https://github.com/tower-rs/tower.git" } # DEV DEP
-tower-test = { git = "https://github.com/leoyvens/tower.git", branch = "fix-call-all-pending-stream"} # DEV DEP
+cid = "0.8.3"
+anyhow = "1.0"
 
 [dev-dependencies]
+tower-test = { git = "https://github.com/tower-rs/tower.git" }
 graph-mock = { path = "../mock" }
 walkdir = "2.3.2"
 test-store = { path = "../store/test-store" }
