--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,9 @@ members = [
     "store/postgres",
     "store/test-store",
     "graph",
+    "tests-common",
     "tests",
+    "k6-tests"
 ]
 
 # Incremental compilation on Rust 1.58 causes an ICE on build. As soon as graph node builds again, these can be removed.
