--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,7 +34,7 @@ serde_derive = "1.0.125"
 serde_json = { version = "1.0", features = ["arbitrary_precision"] }
 serde_yaml = "0.8"
 slog = { version = "2.7.0", features = ["release_max_level_trace", "max_level_trace"] }
-stable-hash = { git = "https://github.com/graphprotocol/stable-hash" }
+stable-hash = { git = "https://github.com/graphprotocol/stable-hash", rev = "752463958b369506845e89da8b831430146c61d1" }
 strum = "0.21.0"
 strum_macros = "0.21.1"
 slog-async = "2.5.0"
