--- a/graph/Cargo.toml
+++ b/graph/Cargo.toml
@@ -34,7 +34,7 @@ serde_derive = "1.0.125"
 serde_json = { version = "1.0", features = ["arbitrary_precision"] }
 serde_yaml = "0.8"
 slog = { version = "2.7.0", features = ["release_max_level_trace", "max_level_trace"] }
-stable-hash-legacy = { git = "https://github.com/graphprotocol/stable-hash", package = "stable-hash" }
+stable-hash_legacy = { version = "0.3.2", package = "stable-hash" }
 strum = "0.21.0"
 strum_macros = "0.21.1"
 slog-async = "2.5.0"
