--- a/store/postgres/Cargo.toml
+++ b/store/postgres/Cargo.toml
@@ -24,7 +24,7 @@ postgres = "0.19.1"
 rand = "0.8.4"
 serde = "1.0"
 uuid = { version = "0.8.1", features = ["v4"] }
-stable-hash = { git = "https://github.com/graphprotocol/stable-hash" }
+stable-hash_legacy = { version = "0.3.2", package = "stable-hash" }
 diesel_derives = "1.4.1"
 anyhow = "1.0.54"
 git-testament = "0.2.0"
