--- a/graphql/Cargo.toml
+++ b/graphql/Cargo.toml
@@ -11,7 +11,7 @@ graphql-tools = "0.0.19"
 indexmap = "1.8"
 Inflector = "0.11.3"
 lazy_static = "1.2.0"
-stable-hash = { git = "https://github.com/graphprotocol/stable-hash" }
+stable-hash_legacy = { version = "0.3.2", package = "stable-hash" }
 once_cell = "1.10.0"
 defer = "0.1"
 parking_lot = "0.12"
