End to end test - First Test (#3466)
* refactor TriggersAdapter

* End to end test: Part 2

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,6 +66,52 @@ jobs:
           command: test
           args: --verbose --workspace --exclude graph-tests -- --nocapture
 
+  runner-tests:
+    name: Subgraph Runner integration tests
+    strategy:
+      fail-fast: false
+      matrix:
+        rust: ["stable"]
+    runs-on: ubuntu-latest
+    services:
+      ipfs:
+        image: ipfs/go-ipfs:v0.4.23
+        ports:
+          - 5001:5001
+      postgres:
+        image: postgres
+        env:
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: graph_node_test
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          - 5432:5432
+    steps:
+      - name: Checkout sources
+        uses: actions/checkout@v2
+
+      - name: Cache cargo registry
+        uses: actions/cache@v2
+        with:
+          path: |
+            ~/.cargo/registry
+            ~/.cargo/git
+          key: test-cargo-${{ hashFiles('**/Cargo.toml') }}
+
+      - name: Install rust toolchain
+        uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: ${{ matrix.rust }}
+          override: true
+
+      - name: Install lld
+        run: sudo apt-get install -y lld
+
       - name: Run runner tests
         id: runner-tests-1
         uses: actions-rs/cargo@v1
@@ -75,7 +121,6 @@ jobs:
         with:
           command: test
           args: --verbose --package graph-tests -- test_runner --nocapture
-        continue-on-error: true
 
   integration-tests:
     name: Run integration tests
