--- a/graphql/Cargo.toml
+++ b/graphql/Cargo.toml
@@ -12,6 +12,7 @@ indexmap = "1.8"
 Inflector = "0.11.3"
 lazy_static = "1.2.0"
 stable-hash_legacy = { version = "0.3.2", package = "stable-hash" }
+stable-hash = { version = "0.4.1"}
 once_cell = "1.10.0"
 defer = "0.1"
 parking_lot = "0.12"
