--- a/store/postgres/Cargo.toml
+++ b/store/postgres/Cargo.toml
@@ -21,6 +21,8 @@ lazy_static = "1.1"
 lru_time_cache = "0.11"
 maybe-owned = "0.3.4"
 postgres = "0.19.1"
+openssl = "0.10.38"
+postgres-openssl = "0.5.0"
 rand = "0.8.4"
 serde = "1.0"
 uuid = { version = "1.0.0", features = ["v4"] }
