--- a/graph/Cargo.toml
+++ b/graph/Cargo.toml
@@ -50,8 +50,9 @@ url = "2.2.1"
 prometheus = "0.13.0"
 priority-queue = "0.7.0"
 tonic = { version = "0.5.1", features = ["tls-roots"] }
-prost = "0.8.0"
-prost-types = "0.8.0"
+prost = "0.10.1"
+prost-types = "0.10.1"
+
 futures03 = { version = "0.3.1", package = "futures", features = ["compat"] }
 wasmparser = "0.78.2"
 thiserror = "1.0.25"
@@ -69,4 +70,4 @@ maplit = "1.0.2"
 structopt = { version = "0.3" }
 
 [build-dependencies]
-tonic-build = "0.5.1"
+tonic-build = { version = "0.7.1", features = ["prost"] }
