Rename Tendermint to Cosmos (#3543)
* Transaction Handler for Tendermint chain

* Update TendermintTransactionData type value

* Update TransactionData impl fn names to reflect return types

* Apply improvement comments from GRAPH-256 PR

* update tendermint codec.proto and generated.rs

* update type + padding

* Add GasCounter

* Add new IndexForAscTypeId for tendermint

* ToAscObj for new codec message

* ToAscObj for new codec message

* ToAscObj for new codec message

* remove commented code

* Update Tendermint protobufs

* Refactor the `abi.rs` file

* Use `asc_new_or_missing` where appropriate

* Rename Tendermint to Cosmos

* Add Firehose Tendermint EventFilter proto

* Add event filter to tendermint TriggerFilter

* Improve trigger filters unit tests

* Filter received Tendermint triggers

* Unit test received Tendermint trigger filtering

* Rename tendermint to cosmos

* for all filtering related files and types
* in docs

* Rename event filter to event type filter

* Add Cosmos From<Block> for HeaderOnlyBlock

* Fmt

* Fix cosmos filtering unit tests

* Fix EventTypeFilter proto url

* Remove old tendermint firehose transform file

* Undo tendermint cosmos renaming in docs

* Fix the namespace in the Cosmos transform proto

* Fix the field type mismatch for enums

* Add HeaderOnlyBlock where the full block is not needed.

* Add missing paddings in Cosmos structures

* Add unit test for Cosmos Asc memory alignment

* Add missing paddings in memory alignment tests

* Fix the order of imports

Co-authored-by: Marc Puig <krusspy@gmail.com>
Co-authored-by: roignpar <47150492+roignpar@users.noreply.github.com>
Co-authored-by: Seb-figment <sebastien.nobert@figment.io>
Co-authored-by: Robert Ignat <robert.ignat91@gmail.com>

--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -26,7 +26,7 @@ graph-core = { path = "../core" }
 graph-chain-arweave = { path = "../chain/arweave" }
 graph-chain-ethereum = { path = "../chain/ethereum" }
 graph-chain-near = { path = "../chain/near" }
-graph-chain-tendermint = { path = "../chain/tendermint" }
+graph-chain-cosmos = { path = "../chain/cosmos" }
 graph-graphql = { path = "../graphql" }
 graph-runtime-wasm = { path = "../runtime/wasm" }
 graph-server-http = { path = "../server/http" }
