--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -16,7 +16,7 @@ graph = { path = "../graph" }
 graph-chain-arweave = { path = "../chain/arweave" }
 graph-chain-ethereum = { path = "../chain/ethereum" }
 graph-chain-near = { path = "../chain/near" }
-graph-chain-tendermint = { path = "../chain/tendermint" }
+graph-chain-cosmos = { path = "../chain/cosmos" }
 lazy_static = "1.2.0"
 lru_time_cache = "0.11"
 semver = "1.0.9"
