Initial addition of a substreams example to push out substreams as a data source

--- a/chain/substreams/Cargo.toml
+++ b/chain/substreams/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 tonic-build = { version = "0.7.2", features = ["prost"] }
 
 [dependencies]
+async-stream = "0.3"
 envconfig = "0.10.0"
 futures = "0.1.21"
 http = "0.2.4"
@@ -25,5 +26,5 @@ semver = "1.0.12"
 itertools = "0.10.3"
 
 [dev-dependencies]
-base64 = "0.13.0"
+graph-core = { path = "../../core" }
 tokio = { version = "1", features = ["full"]}
