--- a/graphql/Cargo.toml
+++ b/graphql/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 crossbeam = "0.8"
 graph = { path = "../graph" }
 graphql-parser = "0.4.0"
-graphql-tools = { git = "https://github.com/dotansimha/graphql-tools-rs", branch = "clone-validation-error" }
+graphql-tools = "0.0.20" 
 indexmap = "1.9"
 Inflector = "0.11.3"
 lazy_static = "1.2.0"
