--- a/tests/Cargo.toml
+++ b/tests/Cargo.toml
@@ -3,12 +3,15 @@ name = "graph-tests"
 version = "0.26.0"
 edition = "2021"
 
+[dependencies]
+port_check = "0.1.5"
+anyhow = "1.0"
+
 [dev-dependencies]
 slog = { version = "2.7.0", features = ["release_max_level_trace", "max_level_trace"] }
 bollard = "0.10"
 tokio = {version = "1.16.1", features = ["rt", "macros", "process"]}
 tokio-stream = "0.1"
-port_check = "0.1.5"
 anyhow = "1.0.57"
 lazy_static = "1.4.0"
 graph-node = { path = "../node" }
