--- a/chain/cosmos/Cargo.toml
+++ b/chain/cosmos/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2018"
 
 [build-dependencies]
 tonic-build = { version = "0.7.1", features = ["prost"] }
-common = { path = "../common" }
+graph-chain-common = { path = "../common" }
 
 [dependencies]
 graph = { path = "../../graph" }
