--- a/runtime/derive/Cargo.toml
+++ b/runtime/derive/Cargo.toml
@@ -10,4 +10,4 @@ proc-macro = true
 syn = { version = "1.0", features = ["full", "fold", "parsing"] }
 quote = "1.0"
 proc-macro2 = "1.0.39"
-convert_case = "0.5.0"
+heck = "0.4"
