--- a/chain/substreams/Cargo.toml
+++ b/chain/substreams/Cargo.toml
@@ -21,17 +21,11 @@ anyhow = "1.0"
 tiny-keccak = "1.5.0"
 hex = "0.4.3"
 semver = "1.0.12"
-tonic = { version = "0.7.1", features = ["tls-roots"] }
 
 itertools = "0.10.3"
-
-graph-runtime-wasm = { path = "../../runtime/wasm" }
-graph-runtime-derive = { path = "../../runtime/derive" }
 
 [dev-dependencies]
 graph-core = { path = "../../core" }
 test-store = { path = "../../store/test-store" }
 base64 = "0.13.0"
-
-
-
+tokio = { version = "1", features = ["full"]}
