--- a/graph/Cargo.toml
+++ b/graph/Cargo.toml
@@ -23,11 +23,13 @@ hex = "0.4.3"
 http = "0.2.3"
 futures = "0.1.21"
 graphql-parser = "0.4.0"
+graphql-tools = "0.1.0"
 lazy_static = "1.4.0"
 num-bigint = { version = "^0.2.6", features = ["serde"] }
 num_cpus = "1.13.1"
 num-traits = "0.2.15"
 rand = "0.8.4"
+second-stack = "0.3.5"
 semver = { version = "1.0.12", features = ["serde"] }
 serde = { version = "1.0.126", features = ["rc"] }
 serde_derive = "1.0.125"
