--- a/tests/Cargo.toml
+++ b/tests/Cargo.toml
@@ -18,6 +18,7 @@ graph-graphql = { path = "../graphql" }
 graph-store-postgres = { path = "../store/postgres" }
 slog = { version = "2.7.0", features = ["release_max_level_trace", "max_level_trace"] }
 graphql-parser = "0.4.0"
+hex = "0.4.3"
 
 [dev-dependencies]
 bollard = "0.10"
@@ -25,4 +26,5 @@ anyhow = "1.0.62"
 lazy_static = "1.4.0"
 tokio-stream = "0.1"
 serde_yaml = "0.8"
+cid = "0.8.6"
 graph-chain-near = { path = "../chain/near" }
