feature: Add support for offchain data sources & templates (#3791)
* Refactor manifest data sources

* Refactor manifest data source templates

* Start offchain monitors for static sources

* Run offchain handlers

* offchain: dont expect `manifest_idx` in the manifest

* offchain: add `match_and_decode`, persist normally, require source

* trigger processor: take block ptr from the trigger

* offchain: Return cid to dataSource.address host fn

* runner: transact modifications of offchain events

* ethereum: fix test build

* ipfs: Set a default maximum file size

* ipfs: Add env var for max concurrent requests

* ipfs: Share ipfs service across subgraphs

* offchain: move `ready_offchain_events` to `OffchainMonitor`

* runner: Clarify comments

* core: Remove unecessary params from `add_dynamic_data_source`

* core: Move poi_version out of the instance

* core: Move `mod instance` under `mod context`

This should clarify the SubgraphInstance responsiblity of keeping
track of the hosts.

* core: Refactor OffchainMonitor::add_data_source

* offchain: Better handling of duplicates

* offchain: Bump max ipfs concurrent requests to 100

* refactor: Expose RuntimeHost data source

* offchain: Remove dses that have been processed

* refactor: Extract ReadStore out of WritableStore

* test: Add graphql queries to end-to-end tests

* feat(file ds): Bump max spec version to 0.0.7

* test: Add basic file data sources e2e test

* runner: Isolate offchain data sources

* offchain: Forbid static file data sources

* store: Assign separate causality region for offchain dses

* graph: Fix release build

* tests: yarn upgrade, add file ds to the workspace

* fix: Update comments

Co-authored-by: Leonardo Yvens <leoyvens@gmail.com>

--- a/tests/integration-tests/file-data-sources/subgraph.yaml
+++ b/tests/integration-tests/file-data-sources/subgraph.yaml
@@ -1,4 +1,4 @@
-specVersion: 0.0.4
+specVersion: 0.0.7
 schema:
   file: ./schema.graphql
 dataSources:
@@ -10,7 +10,7 @@ dataSources:
       abi: Contract
     mapping:
       kind: ethereum/events
-      apiVersion: 0.0.6
+      apiVersion: 0.0.7
       language: wasm/assemblyscript
       entities:
         - Gravatar
@@ -21,20 +21,16 @@ dataSources:
         - handler: handleBlock
       file: ./src/mapping.ts
 templates:
-  - kind: ethereum/contract
-    name: Template
-    network: test
-    source:
-      abi: Contract
+  - kind: file/ipfs
+    name: File
     mapping:
       kind: ethereum/events
-      apiVersion: 0.0.6
+      apiVersion: 0.0.7
       language: wasm/assemblyscript
       entities:
         - Gravatar
       abis:
         - name: Contract
           file: ./abis/Contract.abi
-      blockHandlers:
-        - handler: handleBlockTemplate
+      handler: handleFile
       file: ./src/mapping.ts
