--- a/graph/Cargo.toml
+++ b/graph/Cargo.toml
@@ -49,7 +49,7 @@ tokio-retry = "0.3.0"
 url = "2.2.1"
 prometheus = "0.13.1"
 priority-queue = "0.7.0"
-tonic = { version = "0.7.1", features = ["tls-roots"] }
+tonic = { version = "0.7.1", features = ["tls-roots","compression"] }
 prost = "0.10.4"
 prost-types = "0.10.1"
 
@@ -70,4 +70,4 @@ maplit = "1.0.2"
 structopt = { version = "0.3" }
 
 [build-dependencies]
-tonic-build = { version = "0.7.2", features = ["prost"] }
+tonic-build = { version = "0.7.2", features = ["prost","compression"] }
