--- a/store/postgres/Cargo.toml
+++ b/store/postgres/Cargo.toml
@@ -11,7 +11,7 @@ diesel = { version = "2.0.0", features = ["postgres", "serde_json", "numeric", "
 # We use diesel-dynamic-schema straight from git as the project has not
 # made a release as a crate yet
 diesel-dynamic-schema = { git = "https://github.com/diesel-rs/diesel-dynamic-schema", rev = "a8ec4fb1" }
-diesel-derive-enum = { version = "1.1", features = ["postgres"] }
+diesel-derive-enum = { version = "2.0.0-rc.0", features = ["postgres"] }
 diesel_migrations = "2.0.0"
 fallible-iterator = "0.2.0"
 graph = { path = "../../graph" }
