--- a/chain/substreams/Cargo.toml
+++ b/chain/substreams/Cargo.toml
@@ -22,7 +22,8 @@ dirs-next = "2.0"
 anyhow = "1.0"
 tiny-keccak = "1.5.0"
 hex = "0.4.3"
-semver = "1.0.14"
+semver = "1.0.12"
+base64 = "0.13.0"
 
 itertools = "0.10.5"
 
