--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -13,7 +13,7 @@ name = "graphman"
 path = "src/bin/manager.rs"
 
 [dependencies]
-clap = "3.2.21"
+clap = { version = "3.2.22", features = ["derive", "env"] }
 env_logger = "0.9.0"
 git-testament = "0.2"
 graphql-parser = "0.4.0"
@@ -39,7 +39,6 @@ graph-store-postgres = { path = "../store/postgres" }
 regex = "1.5.4"
 serde = { version = "1.0.126", features = ["derive", "rc"] }
 serde_regex = "1.1.0"
-structopt = { version = "0.3.26", features = ["wrap_help"] }
 toml = "0.5.7"
 shellexpand = "2.1.0"
 diesel = "1.4.8"
