--- a/store/postgres/Cargo.toml
+++ b/store/postgres/Cargo.toml
@@ -33,6 +33,7 @@ git-testament = "0.2.0"
 itertools = "0.10.5"
 pin-utils = "0.1"
 hex = "0.4.3"
+serial_test = "0.9.0"
 
 [dev-dependencies]
 futures = "0.3"
