--- a/tests/Cargo.toml
+++ b/tests/Cargo.toml
@@ -19,6 +19,7 @@ graph-store-postgres = { path = "../store/postgres" }
 slog = { version = "2.7.0", features = ["release_max_level_trace", "max_level_trace"] }
 graphql-parser = "0.4.0"
 hex = "0.4.3"
+serial_test = "0.9.0"
 
 [dev-dependencies]
 bollard = "0.10"
