--- a/chain/common/Cargo.toml
+++ b/chain/common/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "graph-chain-common"
-version = "0.28.2"
-edition = "2021"
+version.workspace = true
+edition.workspace = true
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
