--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -1,15 +1,15 @@
 [package]
 name = "graph-core"
-version = "0.28.2"
-edition = "2021"
+version.workspace = true
+edition.workspace = true
 
 [dependencies]
 async-trait = "0.1.50"
 atomic_refcell = "0.1.8"
 async-stream = "0.3"
 bytes = "1.0"
-futures01 = { package="futures", version="0.1.31" }
-futures = { version="0.3.4", features=["compat"] }
+futures01 = { package = "futures", version = "0.1.31" }
+futures = { version = "0.3.4", features = ["compat"] }
 graph = { path = "../graph" }
 # This dependency is temporary. The multiblockchain refactoring is not
 # finished as long as this dependency exists
