--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "graph-node"
-version = "0.28.2"
-edition = "2021"
+version.workspace = true
+edition.workspace = true
 default-run = "graph-node"
 
 [[bin]]
