--- a/runtime/wasm/Cargo.toml
+++ b/runtime/wasm/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "graph-runtime-wasm"
-version = "0.28.2"
-edition = "2021"
+version.workspace = true
+edition.workspace = true
 
 [dependencies]
 async-trait = "0.1.50"
