--- a/store/postgres/Cargo.toml
+++ b/store/postgres/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "graph-store-postgres"
-version = "0.28.2"
-edition = "2021"
+version.workspace = true
+edition.workspace = true
 
 [dependencies]
 async-trait = "0.1.50"
@@ -10,7 +10,7 @@ derive_more = { version = "0.99.17" }
 diesel = { version = "1.4.8", features = ["postgres", "serde_json", "numeric", "r2d2"] }
 # We use diesel-dynamic-schema straight from git as the project has not
 # made a release as a crate yet
-diesel-dynamic-schema = { git = "https://github.com/diesel-rs/diesel-dynamic-schema", rev="a8ec4fb1" }
+diesel-dynamic-schema = { git = "https://github.com/diesel-rs/diesel-dynamic-schema", rev = "a8ec4fb1" }
 diesel-derive-enum = { version = "1.1", features = ["postgres"] }
 diesel_migrations = "1.3.0"
 fallible-iterator = "0.2.0"
