--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -40,6 +40,6 @@ services:
       POSTGRES_USER: graph-node
       POSTGRES_PASSWORD: let-me-in
       POSTGRES_DB: graph-node
-      PGDATA: "/data/postgres"
+      PGDATA: "/var/lib/postgresql/data"
     volumes:
       - ./data/postgres:/var/lib/postgresql/data
