Add kyber release ci (#12)

--- a/.github/workflows/kyber-release.yml
+++ b/.github/workflows/kyber-release.yml
@@ -1,4 +1,4 @@
-name: 'Release'
+name: 'Kyber Release'
 
 on:
   workflow_dispatch:
@@ -10,7 +10,7 @@ on:
 
 jobs:
   prepare:
-    runs-on: self-hosted
+    runs-on: ["ubuntu-latest"]
     outputs:
       version_tag: ${{ steps.version_tag.outputs.value }}
       build_date: ${{ steps.build_date.outputs.value }}
@@ -35,7 +35,7 @@ jobs:
       SERVICE: graph-node
       VERSION_TAG: ${{ needs.prepare.outputs.version_tag }}
       BUILD_DATE: ${{ needs.prepare.outputs.build_date }}
-    runs-on: self-hosted
+    runs-on: ["ubuntu-latest"]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -89,7 +89,7 @@ jobs:
     needs:
       - prepare
       - docker
-    runs-on: self-hosted
+    runs-on: ["ubuntu-latest"]
     env:
       VERSION_TAG: ${{ needs.prepare.outputs.version_tag }}
     steps:
